syntax = "proto3";

package dalalstreet.socketapi.models;

message Notification {
  int32 id = 1;
  int32 user_id = 2;
  string text = 3;
  string created_at = 4;
}
